<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_hint">Введите ваш город</string>
    <string name="continue_work">Продолжить</string>
    <string name="moscow">Москва</string>
    <string name="temperature">Температура</string>
    <string name="pressure">Давление</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_light">Светлая</string>
    <string name="theme">Тема</string>
    <string name="settings">Настройки</string>
    <string name="error_message">Введите корректное название города</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="humidity">Влажность</string>
    <string name="refresh">Обновить</string>

    <string name="nav_support">Помощь</string>
    <string name="nav_help">Подсказки</string>
    <string name="nav_feedback">Оставить отзыв</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="error">Ошибка</string>
    <string name="city_error">Нет такого города</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="favorite">Избранное</string>
    <string name="favorites">Избранные города</string>
    <string name="get_weather">Узнать погоду</string>
    <string name="weather_on_map">Погода на карте</string>
</resources>
